--- a/Views/Shared/_LayoutNavBar.cshtml
+++ b/Views/Shared/_LayoutNavBar.cshtml
@@ -22,7 +22,7 @@
             </div>
             <ul class="nav navbar-nav">
                 <li><a href="@Url.Action("Index", "Admin")">Skill List</a></li>
-                <li><a href="#">New Skill</a></li>
+                <li><a href="@Url.Action("NewSkill", "Admin")">New Skill</a></li>
                 <li><a href="@Url.Action("Index", "Default")">Go to Site</a></li>
             </ul>
         </div>
