Update Page and Update Method is added. However not working properly. Needs to be fixed.

--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -32,7 +32,7 @@
             <td>&nbsp; @item.SkillName</td>
             <td>&nbsp; @item.PercentageValue</td>
             <td><a href="/Admin/SkillDelete/@item.SkillId" class="btn btn-danger">Delete</a></td>
-            <td><a class="btn btn-success">Update</a></td>
+            <td><a href="/Admin/SkillUpdate/@item.SkillId" class="btn btn-success">Update</a></td>
         </tr>
     }
 </table>
